[gd_scene load_steps=20 format=3 uid="uid://dfw6wqw7gqp1a"]

[ext_resource type="Script" path="res://scene/pachinko.gd" id="1_q5b7l"]
[ext_resource type="PackedScene" uid="uid://hnvyunxvbv1o" path="res://scene/balls/ball.tscn" id="2_jkr4v"]
[ext_resource type="Script" path="res://scene/levels/playfield.gd" id="3_hfok1"]
[ext_resource type="PackedScene" uid="uid://c7sash61jawkf" path="res://scene/misc/mouse.tscn" id="3_sqab6"]
[ext_resource type="Script" path="res://scene/levels/playfield_ui.gd" id="4_eymai"]
[ext_resource type="Theme" uid="uid://b3wr8s3uackbf" path="res://scene/themes/slot_theme.tres" id="5_12cb8"]
[ext_resource type="Script" path="res://scene/misc/slots.gd" id="5_wyosh"]
[ext_resource type="PackedScene" uid="uid://b3c3y7cko4pgf" path="res://scene/pegs/peg.tscn" id="6_uvr82"]
[ext_resource type="PackedScene" uid="uid://bs27aobfwpcds" path="res://scene/misc/wall.tscn" id="7_fvofa"]
[ext_resource type="AudioStream" uid="uid://cyuxek0w28sn1" path="res://addons/kenney music jingles/8-Bit jingles/jingles_nes_3.ogg" id="8_g4gvp"]
[ext_resource type="AudioStream" uid="uid://bnn8saog50tlq" path="res://addons/kenney music jingles/8-Bit jingles/jingles_nes_9.ogg" id="8_mt3s6"]
[ext_resource type="PackedScene" uid="uid://dqtw3x8oxhcdx" path="res://scene/cups/cup.tscn" id="10_8cfso"]
[ext_resource type="PackedScene" uid="uid://ctjx83t6p3aw7" path="res://scene/misc/out_of_bounds.tscn" id="11_lukya"]
[ext_resource type="AudioStream" uid="uid://brurjtngojn5u" path="res://addons/kenney music jingles/8-Bit jingles/jingles_nes_10.ogg" id="12_aaqkm"]
[ext_resource type="PackedScene" uid="uid://yu0xhyysih47" path="res://scene/misc/launcher.tscn" id="13_6yej0"]
[ext_resource type="PackedScene" uid="uid://ciffvs6f7r7b6" path="res://scene/misc/ball_return.tscn" id="14_i2v4r"]

[sub_resource type="Theme" id="Theme_7y8ya"]
default_font_size = 75

[sub_resource type="Theme" id="Theme_6iq82"]
default_base_scale = 29.8

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3l3jn"]
friction = 0.1

[node name="Pachinko" type="Node2D" node_paths=PackedStringArray("launcher")]
script = ExtResource("1_q5b7l")
ball_scene = ExtResource("2_jkr4v")
launcher = NodePath("Playfield/Launcher")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0, 0.027451, 1)
metadata/_edit_group_ = true

[node name="Playfield" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfok1")

[node name="PlayfieldUI" type="Control" parent="Playfield"]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("4_eymai")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Playfield/PlayfieldUI"]
layout_mode = 0
offset_left = 494.0
offset_top = 435.0
offset_right = 1079.0
offset_bottom = 572.0
theme = ExtResource("5_12cb8")

[node name="Slots" type="HBoxContainer" parent="Playfield/PlayfieldUI/AspectRatioContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("5_wyosh")
spin_duration = 1.2

[node name="Label1" type="Label" parent="Playfield/PlayfieldUI/AspectRatioContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2
text = "0
"

[node name="Label2" type="Label" parent="Playfield/PlayfieldUI/AspectRatioContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="Playfield/PlayfieldUI/AspectRatioContainer/Slots"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Inventory" type="Label" parent="Playfield/PlayfieldUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1179.0
offset_top = 181.0
offset_right = 1351.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)
theme = SubResource("Theme_7y8ya")
text = "0000"

[node name="stage_health" type="ProgressBar" parent="Playfield/PlayfieldUI"]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.549999
anchor_top = 0.15
anchor_right = 0.549999
anchor_bottom = 0.15
offset_left = 472.0
offset_top = 288.0
offset_right = 490.0
offset_bottom = 328.0
scale = Vector2(1.1, 13)
tooltip_text = "enemy health
"
theme = SubResource("Theme_6iq82")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Pegs" type="Node2D" parent="Playfield"]
position = Vector2(0, 16)

[node name="Pin" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(944, 496)

[node name="Pin7" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(912, 560)

[node name="Pin8" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(848, 560)

[node name="Pin9" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(784, 560)

[node name="Pin10" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(720, 560)

[node name="Pin11" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(944, 624)

[node name="Pin12" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(880, 624)

[node name="Pin13" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(816, 624)

[node name="Pin14" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(752, 624)

[node name="Pin15" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(688, 624)

[node name="Pin17" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(912, 688)

[node name="Pin18" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(848, 688)

[node name="Pin19" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(784, 688)

[node name="Pin20" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(720, 688)

[node name="Pin21" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(624, 496)

[node name="Pin22" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(656, 560)

[node name="Pin23" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(624, 624)

[node name="Pin24" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(656, 688)

[node name="Pin26" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(592, 560)

[node name="Pin6" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(944, 376)

[node name="Pin16" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(880, 376)

[node name="Pin25" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(816, 376)

[node name="Pin27" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(752, 376)

[node name="Pin29" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(688, 376)

[node name="Pin30" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(912, 440)

[node name="Pin34" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(624, 376)

[node name="Pin36" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(592, 440)

[node name="Pin28" parent="Playfield/Pegs" instance=ExtResource("6_uvr82")]
position = Vector2(592, 688)

[node name="Walls" type="Node2D" parent="Playfield"]
position = Vector2(-64, 96)

[node name="StageTop" parent="Playfield/Walls" node_paths=PackedStringArray("collision_polygon_2d") instance=ExtResource("7_fvofa")]
position = Vector2(24, 0)
physics_material_override = SubResource("PhysicsMaterial_3l3jn")
collision_polygon_2d = NodePath("CollisionPolygon2D2")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Playfield/Walls/StageTop"]
polygon = PackedVector2Array(1144, 728, 1144, 224, 1144, 200, 1136, 184, 1112, 176, 1088, 176, 592, 176, 560, 184, 552, 208, 552, 704, 664, 784, 664, 832, 680, 832, 960, 832, 960, 776, 984, 760, 1040, 736, 1040, 784, 1144, 784, 1144, 760, 1095, 768, 1072, 760, 1072, 720, 1072, 384, 1072, 352, 1064, 328, 1040, 328, 1040, 384, 1040, 712, 968, 752, 944, 768, 944, 816, 680, 816, 680, 776, 568, 696, 568, 344, 568, 304, 576, 264, 592, 240, 616, 224, 656, 216, 728, 208, 896, 208, 960, 216, 1024, 232, 1064, 256, 1088, 280, 1104, 312, 1112, 352, 1112, 728)

[node name="Hopper" parent="Playfield/Walls" node_paths=PackedStringArray("collision_polygon_2d") instance=ExtResource("7_fvofa")]
position = Vector2(24, 608)
collision_polygon_2d = NodePath("CollisionPolygon2D")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Playfield/Walls/Hopper"]
polygon = PackedVector2Array(1424, 96, 1424, -408, 1416, -424, 1408, -432, 1316.21, -438.556, 1274.78, -438.484, 1184, -432, 1176, -424, 1168, -408, 1168, -80, 1168, -16, 1168, 16, 1192, 32, 1232, 40, 1296, 53, 1307, 57, 1310, 59, 1311, 61, 1311, 64, 1309, 68, 1305, 73, 1292, 81, 1272, 88, 1144, 104, 1144, 120, 1272, 104, 1297, 97, 1315, 89, 1328, 80, 1333, 75, 1336, 69, 1337, 63, 1337, 54, 1334, 47, 1326, 40, 1307, 34, 1280, 24, 1200, 0, 1192, -32, 1185, -91, 1184, -408, 1286.82, -422.689, 1303.77, -422.889, 1408, -408, 1408, 7, 1407, 23, 1401, 29, 1387, 34, 1376, 39, 1371.17, 42.7587, 1367, 46, 1364, 54, 1364, 62, 1364, 77, 1364, 93, 1362, 105, 1342, 121, 1296, 136, 1232, 144, 1144, 152, 1144, 176, 1186.28, 176, 1214, 176, 1242, 175, 1277, 173, 1306, 170, 1335, 167, 1365, 163, 1384, 158, 1400, 152, 1410, 144, 1416, 136, 1422, 124, 1424, 112)

[node name="Cups" type="Node2D" parent="Playfield"]

[node name="capture_sound" type="AudioStreamPlayer2D" parent="Playfield/Cups"]
position = Vector2(768, 792)
stream = ExtResource("8_mt3s6")

[node name="crit_capture_sound" type="AudioStreamPlayer2D" parent="Playfield/Cups"]
position = Vector2(768, 792)
stream = ExtResource("8_g4gvp")

[node name="crit" parent="Playfield/Cups" instance=ExtResource("10_8cfso")]
unique_name_in_owner = true
position = Vector2(769, 792)
is_crit = true

[node name="capture" parent="Playfield/Cups" instance=ExtResource("10_8cfso")]
position = Vector2(888, 760)

[node name="capture2" parent="Playfield/Cups" instance=ExtResource("10_8cfso")]
position = Vector2(656, 760)

[node name="OutOfBounds" parent="Playfield" node_paths=PackedStringArray("destory_sound") instance=ExtResource("11_lukya")]
position = Vector2(773, 912)
scale = Vector2(2.765, 0.1)
destory_sound = NodePath("Destroy")

[node name="Destroy" type="AudioStreamPlayer2D" parent="Playfield/OutOfBounds"]
position = Vector2(-4.70162, 3.7002)
scale = Vector2(0.25, 1)
stream = ExtResource("12_aaqkm")

[node name="Launcher" parent="Playfield" instance=ExtResource("13_6yej0")]
position = Vector2(1056, 813)
strenth = 2000.0
fire_rate = 0.5

[node name="BallReturn" parent="Playfield" instance=ExtResource("14_i2v4r")]
unique_name_in_owner = true
position = Vector2(1256, 336)
inventory = 25
base_spawn_delay = 0.1

[node name="Mouse" parent="." instance=ExtResource("3_sqab6")]
unique_name_in_owner = true

[connection signal="jackpot_hit" from="Playfield/PlayfieldUI/AspectRatioContainer/Slots" to="Playfield/PlayfieldUI" method="_on_slots_jackpot_hit"]
[connection signal="jackpot_hit" from="Playfield/PlayfieldUI/AspectRatioContainer/Slots" to="Playfield/BallReturn" method="_on_slots_jackpot_hit"]
[connection signal="crit_captured" from="Playfield/Cups/crit" to="Playfield" method="_on_crit_crit_captured"]
[connection signal="crit_captured" from="Playfield/Cups/crit" to="Playfield/PlayfieldUI/AspectRatioContainer/Slots" method="_on_crit_crit_captured"]
[connection signal="crit_captured" from="Playfield/Cups/crit" to="Playfield/BallReturn" method="_on_crit_crit_captured"]
[connection signal="ball_captured" from="Playfield/Cups/capture" to="Playfield/BallReturn" method="_on_capture_ball_captured"]
[connection signal="ball_captured" from="Playfield/Cups/capture2" to="Playfield/BallReturn" method="_on_capture_2_ball_captured"]
